pgRouting 3.4.0 Release Notes
-------------------------------------------------------------------------------

**New proposed functions**

* With points

  * ``pgr_withPointsVia`` (One Via)

* Turn Restrictions

  * Via with turn restrictions

    * ``pgr_trspVia`` (One Via)
    * ``pgr_trspVia_withPoints`` (One Via)

  * ``pgr_trsp``

    * ``pgr_trsp`` (One to One)
    * ``pgr_trsp`` (One to Many)
    * ``pgr_trsp`` (Many to One)
    * ``pgr_trsp`` (Many to Many)
    * ``pgr_trsp`` (Combinations)

  * ``pgr_trsp_withPoints``

    * ``pgr_trsp_withPoints`` (One to One)
    * ``pgr_trsp_withPoints`` (One to Many)
    * ``pgr_trsp_withPoints`` (Many to One)
    * ``pgr_trsp_withPoints`` (Many to Many)
    * ``pgr_trsp_withPoints`` (Combinations)


* Topology

  * ``pgr_degree``

**Deprecated functions**

* Turn Restrictions

  * ``pgr_trsp(text,integer,integer,boolean,boolean,text)``
  * ``pgr_trsp(text,integer,float8,integer,float8,boolean,boolean,text)``
  * ``pgr_trspViaVertices(text,anyarray,boolean,boolean,text)``
  * ``pgr_trspViaEdges(text,integer[],float[],boolean,boolean,text)``

pgRouting 3.3.2 Release Notes
-------------------------------------------------------------------------------

To see all issues & pull requests closed by this release see the `Git closed
milestone for 3.3.2
<https://github.com/pgRouting/pgrouting/issues?utf8=%E2%9C%93&q=milestone%3A%22Release%203.3.2%22>`_

**Issue fixes**

* [#2276](https://github.com/pgRouting/pgrouting/issues/2276):
  edgeDisjointPaths issues with start_vid and combinations
* [#2312](https://github.com/pgRouting/pgrouting/issues/2312):
  pgr_extractVertices error when target is not BIGINT

pgRouting 3.3.1 Release Notes
-------------------------------------------------------------------------------

To see all issues & pull requests closed by this release see the `Git closed
milestone for 3.3.1
<https://github.com/pgRouting/pgrouting/issues?utf8=%E2%9C%93&q=milestone%3A%22Release%203.3.1%22>`_
on Github.
