@@ -18,7 +18,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          old_pgr: [3.3.1 3.3.0, 3.0.0, 3.0.1, 3.0.2, 3.0.3, 3.0.4, 3.0.6, 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.2.0, 3.2.1, 3.2.1]
+          old_pgr: [3.4.0, 3.3.1 3.3.0, 3.0.0, 3.0.1, 3.0.2, 3.0.3, 3.0.4, 3.0.6, 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.2.0, 3.2.1, 3.2.1]
 
     steps:
       - uses: actions/checkout@v3
@@ -112,7 +112,7 @@ jobs:
           DIR=$(git rev-parse --show-toplevel)
           pushd "${DIR}/tools/testers" > /dev/null || exit 1
           sudo -u postgres bash setup_db.sh 5432 ___pgr___test___ postgres "${{ matrix.old_pgr }}"
-          sudo -u postgres psql -p 5432  -d ___pgr___test___ -c "ALTER EXTENSION pgrouting UPDATE  TO '3.4.0';"
+          sudo -u postgres psql -p 5432  -d ___pgr___test___ -c "ALTER EXTENSION pgrouting UPDATE  TO '4.0.0';"
           sudo -u postgres psql -p 5432  -d ___pgr___test___ -c "SELECT * FROM pgr_full_version();"
           sudo -u postgres pg_prove -Q -f --normalize --directives --recurse --ext .sql -d ___pgr___test___ "../../pgtap"
 
