@@ -35,6 +35,11 @@ To see the full list of changes check the list of `Git commits
    :local:
 
 
+pgRouting 4.0.0 Release Notes
+-------------------------------------------------------------------------------
+
+No Changes Yet
+
 pgRouting 3.4.0 Release Notes
 -------------------------------------------------------------------------------
 
